add color alternating in table

--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,9 @@ table, td, th {
     border: 1px solid black;
     border-collapse: collapse;
 }
+tr:nth-child(even){
+    background-color: #d6edff;
+}
+tr:nth-child(odd), th{
+    background-color: #bad1cd;
+}
